--- a/flaskdash/requirements.txt
+++ b/flaskdash/requirements.txt
@@ -16,16 +16,19 @@ Flask-Session
 email_validator
 
 # Dash Trading
-dash==1.3.1
-dash-core-components==1.2.1
-dash-html-components==1.0.1
-dash-renderer==1.1.0
-dash-table==4.3.0
-WTForms==2.2.1
-pandas==0.24.1
-pandas-datareader==0.8.0
-hyperopt
-matplotlib
+alpha-vantage==2.2.0
+dash==1.11.0
+dash-core-components==1.9.1
+dash-html-components==1.0.3
+dash-renderer==1.4.0
+dash-table==4.6.2
+hyperopt==0.2.4
+matplotlib==1.5.3
+numpy==1.18.4
+pandas==0.24.2
+pandas-datareader==0.8.1
+plotly==4.6.0
+python-dateutil==2.5.3
 
 # Automated tests
 pytest==3.0.5
