--- a/flaskdash/requirements.txt
+++ b/flaskdash/requirements.txt
@@ -18,14 +18,16 @@ SQLAlchemy==1.1.0
 
 # Dash Trading
 dash==1.12.0
-pandas-datareader==0.8.1
+dash-table==4.3.0
+pandas==0.24.1
+pandas-datareader==0.8.0
 alpha-vantage==2.2.0
 hyperopt==0.2.4
 scipy==1.4.1
 matplotlib
 numpy
-pandas
 plotly
+datetime
 python-dateutil
 
 
